--- a/foodtruck-app/app.json
+++ b/foodtruck-app/app.json
@@ -13,17 +13,33 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": { 
+        "googleMapsApiKey": "AIzaSyDBMrTMXWn7QFhlIJnRkETKITmqtt5qLIo" 
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "config": { 
+        "googleMaps": {
+          "apiKey": "AIzaSyDBMrTMXWn7QFhlIJnRkETKITmqtt5qLIo" 
+        }
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [ 
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "영업 위치 공유를 위해 현재 위치 정보가 필요합니다."
+        }
+      ]
+    ]
   }
 }
