--- a/foodtruck-app/package.json
+++ b/foodtruck-app/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@react-native-community/cli": "latest",
+    "@react-navigation/bottom-tabs": "^7.4.5",
     "expo": "~53.0.20",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "1.20.1",
-    "expo-location": "~18.1.6"
+    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
