--- a/foodtruck-app/package.json
+++ b/foodtruck-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/cli": "latest",
     "@react-navigation/bottom-tabs": "^7.4.5",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
@@ -19,8 +20,10 @@
     "react-native": "0.79.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-vector-icons": "^10.3.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
